--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0"
   },
+  "homepage": "http://jasleenkaur37.github.io/phone-directory",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
